change absortion